<resources>
    <string name="app_name" translatable="false">fakelauncher</string>
    <string name="app_settings_name">FakeL Settings</string>
    <string name="shortcut_name">Open fake UI</string>
    <string name="XposedDescription" translatable="false">通过Xposed触发屏幕固定以限制应用使其不可退出，从而达到伪装目的 | Trigger screen pinning through Xposed hook to let app unable to exit.</string>
    <string name="description_device_admin">Do not active me at here because Device Admin is useless. Program needs Device Owner.</string>
    <string name="charging">Charging</string>
    <string name="not_charging">Unplugged</string>
    <string name="main_leftButton">Menu</string>
    <string name="option_leftButton">Option</string>
    <string name="unlock_leftButton">Unlock</string>
    <string name="common_leftButton">OK</string>
    <string name="save_leftButton">Save</string>
    <string name="add_leftButton">Add</string>
    <string name="common_rightButton">Back</string>
    <string name="edittext_rightButton">Delete</string>
    <string name="endcall_rightButton">End Call</string>
    <string name="play_centerButton">Play</string>
    <string name="pause_centerButton">Pause</string>
    <string name="resume_centerButton">Resume</string>
    <string name="stop_centerButton">Stop</string>
    <string name="shoot_centerButton">Shoot</string>
    <string name="record_centerButton">Record</string>
    <string name="loading">Loading</string>
    <string name="load_failed">Failed to load</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="menu_call">Call</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_contact">Contacts</string>
    <string name="menu_sms">SMS</string>
    <string name="menu_set">Settings</string>
    <string name="menu_utils">Utilities</string>
    <string name="menu_media">MultiMedia</string>
    <string name="sim_inserted">Inserted</string>
    <string name="sim_removed">Removed</string>
    <string name="dialog_long_press_star_unlock">Long press "*" to unlock</string>
    <string name="dialog_press_star_unlock">Now press "*" key</string>
    <string name="dialog_unlocked">Unlocked</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="enter_password">Please enter password</string>
    <string name="password_wrong">Wrong password!</string>
    <string name="password_empty">Please input password!</string>
    <string name="dialer_empty">Please input phone number</string>
    <string name="camera_open_fail">Failed to open camera</string>
    <string name="dialog_capture_fail">Failed to capture</string>
    <string name="dialog_record_fail">Failed to start recording</string>
    <string name="dialog_save_fail">Failed to save</string>
    <string name="dialog_save_success">Successfully saved</string>
    <string name="gallery_no_photo">No photo</string>
    <string name="gallery_detail">%s\nDate: %s\nWidth: %d\nHeight: %d</string>
    <string name="message_empty">No message</string>
    <string name="fake_incall_status">Calling</string>
    <string name="fake_incall_unknown">Unknown Number</string>
    <string name="fake_incall_end_call">Ended call</string>
    <string name="contacts_empty">No contact</string>
    <string name="contact_add_title">Add</string>
    <string name="contact_name_label">Name</string>
    <string name="contact_number_label">Number</string>
    <string name="contact_input_required">Please input name and number</string>
    <string name="music_no_track">No track</string>
    <string name="music_unknown_title">Unknown Title</string>
    <string name="music_unknown_artist">Unknown Artist</string>
    <string name="music_connection_failed">Connection failed</string>
    <string name="music_status_buffering">Buffering…</string>
    <string name="music_track_count_fmt">%1$d / %2$d</string>
    <string name="music_album_art">Album art</string>
    <string name="music_prev_track">Previous track</string>
    <string name="music_play_pause">Play/Pause</string>
    <string name="music_next_track">Next track</string>
    <string name="volume_adjust">Volume adjust</string>
    <string name="option_delete">Delete</string>
    <string name="option_detail">Detail</string>
    <string name="option_call">Call</string>
    <string name="option_mode">Switch to %s</string>
    <string name="record">recording</string>
    <string name="shoot">capturing</string>
    <string name="option_switch_camera">Switch to %s camera</string>
    <string name="front">front</string>
    <string name="back">back</string>
    <string name="option_add">Add</string>
    <string name="pref_tap_me">Tap me!</string>
    <string name="pref_caution">Be careful as the feature you\'ve enabled is not common in real feature phones</string>
    <string name="pref_operation_completed">Operation completed</string>
    <string name="pref_operation_failed">Operation failed</string>
    <string name="pref_wait">Please wait…</string>
    <string name="pref_use_root">Please select "root" as the privilege provider</string>
    <string name="pref_page_permissions">Permissions and privileges</string>
    <string name="pref_page_permissions_summary">Program needs them to run normally</string>
    <string name="pref_permissions_ok">Oll Korrect!</string>
    <string name="pref_permissions_ok_summary">All essential permissions are granted</string>
    <string name="pref_permissions_danger">Missing Permissions</string>
    <string name="pref_permissions_danger_summary">Fake UI wont work properly</string>
    <string name="pref_permissions_not_granted_hint">Hey!!!! You still have ungranted permissions!!!</string>
    <string name="pref_category_permissions">ESSENTIAL PERMISSIONS</string>
    <string name="pref_permissions_granted">Permission granted</string>
    <string name="pref_permissions_denied">Permission denied</string>
    <string name="pref_grant_all_permissions">Use privilege provider to grant all permissions</string>
    <string name="pref_grant_all_permissions_summary">Choose a privilege provider first</string>
    <string name="pref_permission_grant_status">Permissions granting status</string>
    <string name="pref_category_storage_access">Storage access</string>
    <string name="pref_file_access_ok">File access permissions enough</string>
    <string name="pref_file_access_warn">Missing file access permissions</string>
    <string name="pref_file_access_warn_summary">Gallery, camera, and music player may be affected</string>
    <string name="pref_gallery_access">Choose a path to access pictures for gallery</string>
    <string name="pref_saf_access_summary">Use Storage Access Framework (SAF) to grant permission</string>
    <string name="pref_music_access_type">Type to find music files.</string>
    <string name="pref_music_access_type_auto_search">Automatically search</string>
    <string name="pref_music_access_type_custom_dir">Manually pick a music folder</string>
    <string name="pref_music_access_saf">Choose a path to access musics for music player</string>
    <string name="pref_category_privileges">Privileges</string>
    <string name="pref_check_xposed">XPOSED MODULE</string>
    <string name="activated">Activated</string>
    <string name="pref_xposed_activated_summary" translatable="false">API %d</string>
    <string name="not_activated">Not activated yet</string>
    <string name="pref_xposed_not_activated">Xposed module is not activated</string>
    <string name="pref_xposed_warn_summary">May not achieve expected disguise effect</string>
    <string name="pref_privilege_provider">PRIVILEGE PROVIDER</string>
    <string name="pref_privilege_provider_summary">Short click to choose a privilege provider, long press to request the privilege</string>
    <string name="pref_check_privilege_granted">Granted - %s</string>
    <string name="pref_check_privilege_denied">Denied - %s</string>
    <string name="pref_provider_none">No provider</string>
    <string name="pref_provider_root" translatable="false">Root</string>
    <string name="pref_provider_shizuku" translatable="false">Shizuku</string>
    <string name="pref_provider_warn">Low Privilege</string>
    <string name="pref_provider_warn_summary">Better grant root access, or some functions like "Touch blocking +" wont work.</string>
    <string name="pref_check_privilege">Check if privilege has been granted</string>
    <string name="pref_check_privilege_none">You have no privilege provider, so why do you tap me?</string>
    <string name="pref_enable_dhizuku">Use Dhizuku</string>
    <string name="pref_check_device_admin">Check device owner</string>
    <string name="pref_activated_device_admin">Privilege low - Device Admin</string>
    <string name="pref_activated_device_owner">Activated - Device Owner</string>
    <string name="pref_activated_dhizuku">Activated - Dhizuku</string>
    <string name="pref_deactivate_device_owner">Deactivate device owner</string>
    <string name="pref_deactivated">Deactivated</string>
    <string name="pref_click_to_activate">Deactivated, click to activate</string>
    <string name="pref_command_activate">Deactivated, click to check activate command</string>
    <string name="pref_page_view">View</string>
    <string name="pref_page_view_summary">Configurations for UI</string>
    <string name="pref_style">UI style</string>
    <string name="pref_style_phone">Feature phone</string>
    <string name="pref_style_player">Media player</string>
    <string name="pref_time_show_seconds">Show seconds in the clock</string>
    <string name="pref_time_show_seconds_summary">Time display will be accurate to seconds</string>
    <string name="pref_show_accurate_battery">Show accurate battery percent</string>
    <string name="pref_show_accurate_battery_summary">Battery icon will be hidden at the same time</string>
    <string name="pref_main_ui_height_scale">Main UI zoom scale</string>
    <string name="pref_main_ui_height_scale_summary">Adjusting the size of elements on main UI, click to preview</string>
    <string name="pref_text_stroke_width">Text stroke width</string>
    <string name="pref_text_stroke_width_summary">Adjusting the width of texts on main UI</string>
    <string name="pref_page_behaviour">Behaviour</string>
    <string name="pref_page_behaviour_summary">Control some behaviours of the program</string>
    <string name="pref_dpad_center_open_menu">Dpad center can open menu</string>
    <string name="pref_dpad_center_open_menu_summary">"Dpad center" is the center of the direction keys</string>
    <string name="pref_vibrate_on_start">Vibrate when opening fake UI</string>
    <string name="pref_vibrate_on_start_summary">So you can aware that fake UI has been opened</string>
    <string name="pref_exit_fakeui_method">Method to exit Fake UI</string>
    <string name="pref_exit_fakeui_config">Config for triggering exit</string>
    <string name="pref_exit_dpad">D-pad keys in MainUI</string>
    <string name="pref_exit_dialer">Dialer secret code</string>
    <string name="pref_exit_password">Custom password while entering Settings in menu</string>
    <string name="pref_enhanced_touch_blocking">Touch blocking +</string>
    <string name="pref_page_about">About</string>
    <string name="pref_page_about_summary">Author of the mountain of shit: what_the_bruhhhh</string>
    <string name="fun_restore_touch">Restore touchscreen</string>
    <string name="fun_restore_touch_summary">It seems that the touchscreen is still disabled outside the fake UI. Click to restore it.</string>
    <string name="crash_title">OOPS</string>
    <string name="crash_subtitle">App crashed unexpectedly. Here\'s the log.</string>
    <string name="crash_placeholder">Loading crash log…</string>
    <string name="crash_restart">Restart</string>
    <string name="crash_copy">Copy</string>
    <string name="crash_exit">Exit</string>
</resources>