<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.wtbruh.fakelauncher.ui.preference.XposedPreference
        android:key="check_xposed"
        tools:title="@string/not_activated"
        tools:summary="@string/pref_xposed_warn_summary"/>
    <com.wtbruh.fakelauncher.ui.preference.PrivilegeProviderPreference
        android:defaultValue="@string/pref_privilege_provider_default"
        android:entries="@array/pref_privilege_provider_string"
        android:entryValues="@array/pref_privilege_provider"
        android:key="privilege_provider"
        tools:title="@string/pref_check_privilege_denied"
        android:summary="@string/pref_privilege_provider_summary" />
    <com.wtbruh.fakelauncher.ui.preference.PermissionPreference
        android:key="grant_all_permissions"
        tools:title="@string/pref_permissions_granted"
        tools:summary="@string/pref_permissions_ok_summary"/>
    <Preference
        android:key="permission_grant_status"
        android:title="@string/pref_permission_grant_status" />
    <PreferenceCategory android:title="@string/pref_category_storage_access">
        <Preference
            android:key="gallery_access"
            android:title="@string/pref_gallery_access"
            android:summary="@string/pref_saf_access_summary" />
        <ListPreference
            android:defaultValue="@string/pref_music_access_type_default"
            android:key="music_access_type"
            android:title="@string/pref_music_access_type"
            android:entries="@array/pref_music_access_type_string"
            android:entryValues="@array/pref_music_access_type"/>
        <Preference
            android:key="music_access_saf"
            android:title="@string/pref_music_access_saf"
            android:summary="@string/pref_saf_access_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_privileges">
        <SwitchPreference
            android:defaultValue="false"
            android:key="enable_dhizuku"
            android:title="@string/pref_enable_dhizuku" />
        <Preference
            android:key="check_device_admin"
            android:title="@string/pref_check_device_admin"
            android:summary="@string/pref_tap_me" />
        <Preference
            android:key="deactivate_device_owner"
            android:title="@string/pref_deactivate_device_owner"
            app:isPreferenceVisible="false" />
    </PreferenceCategory>
</PreferenceScreen>