<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="48dp"
    android:paddingEnd="48dp">

    <TextView
        android:id="@+id/contact_add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/contact_add_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contact_add_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/contact_name_label"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/contact_add_title" />

    <TextView
        android:id="@+id/contact_add_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/contact_add_name_label" />

    <View
        android:id="@+id/contact_add_name_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/contact_add_name" />

    <TextView
        android:id="@+id/contact_add_number_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/contact_number_label"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/contact_add_name_line" />

    <TextView
        android:id="@+id/contact_add_number"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/contact_add_number_label" />

    <View
        android:id="@+id/contact_add_number_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/contact_add_number" />
</androidx.constraintlayout.widget.ConstraintLayout>
